paymaster test
